<resources>
    <string name="app_name">MyAppPortfolio</string>
    <string name="action_settings">Settings</string>
    <string name="txv_my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="btn_spotify_streamer">SPOTIFY STREAMER</string>
    <string name="btn_scores_app">SCORES APP</string>
    <string name="btn_library_app">LIBRARY APP</string>
    <string name="btn_build_it_bigger">BUILD IT BIGGER</string>
    <string name="btn_xyz_reader">XYZ READER</string>
    <string name="btn_capstone">CAPSTONE: MY OWN APP</string>
</resources>
